--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,40 @@
+/* Width and color of the scrollbar track */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(25 25 25);
+}
+
+/* Handle of the scrollbar */
+::-webkit-scrollbar-thumb {
+    background-color: #7842f5;
+}
+
+/* Hover effect on the scrollbar handle */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #7842f5;
+}
+
 html{
-    scroll-behavior: smooth;
+    scroll-behavior:auto;
 }
 
 body {
+    scroll-behavior: smooth;
     background-color: rgb(25 25 25);
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    overflow:initial;
+
 }
 
+hr{
+    color: rgb(100, 95, 95);
+    width: 100%;
+}
 /* Start NAV */
 nav {
     display: flex;
@@ -152,3 +178,166 @@ nav a:hover {
 }
   
 /* END About */
+/* Start Projects */
+.projects{
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+}
+.projects h1{
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    color: aliceblue;
+    font-size: 2.7em bold;
+}
+
+.projects-container{
+    display: grid;
+    gap: 40px;
+    grid-template-columns: repeat(auto-fill, minmax(24rem,1fr));;
+    justify-items: center;
+}
+/* main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    font-family: 'Roboto', sans-serif;
+  } */
+  .card {
+    width: 24rem;
+    height: 36rem;
+    border-radius: 10px ;
+    border: rebeccapurple;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+    color: #f0f0f0;
+    box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
+  }
+  .card img {
+    position: absolute;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.9;
+    transition: opacity 0.2s ease-out;
+  }
+  .card h2 {
+    position: absolute;
+    inset: auto auto 30px 30px;
+    margin: 0;
+    transition: inset 0.3s 0.3s ease-out;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 1.2em;
+}
+.card p, .card a {
+    font-size: .8em;
+    position: absolute;
+    opacity: 0;
+    max-width: 80%;
+    transition: opacity 0.3s ease-out;
+  }
+  .card p {
+    inset: auto auto 80px 30px;
+  }
+  .card a {
+    inset: auto auto 40px 30px;
+    color: inherit;
+    text-decoration: none;
+  }
+  .card:hover h2 {
+    inset: auto auto 200px 14px;
+    transition: inset 0.3s ease-out;
+  }
+  .card:hover p, .card:hover a {
+    opacity: 1;
+    transition: opacity 0.5s 0.1s ease-in;
+  }
+  .card:hover img {
+    transition: opacity 0.3s ease-in;
+    opacity: 1;
+  }
+  .material-symbols-outlined {
+    vertical-align: middle;
+  }
+
+  
+/* end Projects */
+/* Start contact*/
+.contact{
+    margin-top: 70px;
+    margin-bottom: 70px;
+    display: flex;
+    flex-direction: column;
+}
+.contact h1{
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    color: aliceblue;
+    font-size: 2.7em bold;
+}
+.contact p{
+    color: rgba(255, 255, 255, 0.808);
+    font-size: 1.2em;
+    text-align:justify;
+}
+.contact a {
+    color: #7842f5;
+    font-family: "Blinker", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+/* end contact */
+
+
+/* media queries */
+@media only screen and (max-width: 600px) {
+   .IMG-div{
+    display: none;
+   }
+   .container{
+    gap: 0;
+    padding: 20px;
+    font-size: smaller;
+   }
+   nav{
+        width: 105%;
+   }
+}
+@media only screen and (max-width: 389px) {
+   .IMG-div{
+    display: none;
+   }
+   .container{
+    gap: 0;
+    padding: 20px;
+    font-size: 0.6em;
+   }
+   nav{
+        width: 105%;
+   }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+    .IMG-div{
+     display: none;
+    }
+    .container{
+     gap: 0;
+     padding: 20px;
+     font-size: medium;
+    }
+    /* Styles for medium screens */
+}
+
+@media only screen and (min-width: 1025px) {
+    /* Styles for large screens */
+}
