--- a/styles.css
+++ b/styles.css
@@ -299,7 +299,7 @@ nav a:hover {
 
 
 /* media queries */
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width:481px)and (max-width: 600px) {
    .IMG-div{
     display: none;
    }
@@ -312,7 +312,7 @@ nav a:hover {
         width: 105%;
    }
 }
-@media only screen and (max-width: 414px) {
+@media only screen and (min-width: 320px) and (max-width: 480px){
    .IMG-div{
     display: none;
    }
@@ -338,6 +338,3 @@ nav a:hover {
     /* Styles for medium screens */
 }
 
-@media only screen and (min-width: 1025px) {
-    /* Styles for large screens */
-}
