--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ nav a:hover {
     font-style: normal;
     color: aliceblue;
     font-size: 2.7em bold;
+    margin-bottom: 41px;
 }
 
 .projects-container{
