--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ nav li {
     
 }
 
-nav a {
+ a {
     text-decoration: none;
     color: white;
     transition: color .3s ease;
@@ -127,7 +127,22 @@ nav a:hover {
     text-align:justify;
 }
 
-.button {
+.btn-container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    display: grid;
+    margin-top: 30px;
+    grid-template-columns: auto 1fr 1fr 1fr;
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+#down{
+    background-color: #a985ff;
+    font-size: 0.950rem;
+}
+.button1 {
     display: flex;
     background-color: #ffffff;
     color: rgb(24, 23, 23);
@@ -147,20 +162,50 @@ nav a:hover {
     justify-content: center;
   }
   
-  .button svg {
+  .button1 svg {
     height: 30px;
     color: rgb(24, 23, 23);
     background-color: rgb(24, 23, 23);
     border-radius: 1em;
   }
-  .button a {
+  .button1 a {
     color: rgb(24, 23, 23);
     text-decoration: none;
+  }
+  .button1:hover {
+    transform: scale(1.06);
   }
   .button:hover {
     transform: scale(1.06);
   }
 
+.button {
+    
+    background-color: #0A66C2;
+    color: #ffffff;
+    padding: 0.5rem 1.4rem;
+    font-size: 0.875rem;
+    /* line-height: 1.25rem; */
+    font-weight: 700;
+    text-align: center;
+    vertical-align: middle;
+    align-items: center;
+    border-radius: 0.5rem;
+    gap: 0.75rem;
+    border: none;
+    cursor: pointer;
+    /* box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); */
+    transition: .6s ease;
+
+  }
+  
+  .button svg {
+    height: 30px;
+  }
+  
+  .button:hover {
+    box-shadow: none;
+  }
   .IMG-div{
     /* background-color: #7842f5; */
     /* width: 100%;  */
@@ -179,7 +224,7 @@ nav a:hover {
   
 /* END About */
 /* Start Projects */
-.projects{
+/* .projects{
     margin-top: 70px;
     display: flex;
     flex-direction: column;
@@ -199,14 +244,6 @@ nav a:hover {
     grid-template-columns: repeat(auto-fill, minmax(24rem,1fr));;
     justify-items: center;
 }
-/* main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 50px;
-    font-family: 'Roboto', sans-serif;
-  } */
   .card {
     width: 24rem;
     height: 36rem;
@@ -267,7 +304,7 @@ nav a:hover {
   }
   .material-symbols-outlined {
     vertical-align: middle;
-  }
+  } */
 
   
 /* end Projects */
